# SKouter-backend

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  IMPLEMENTATION.md  Makefile  README.md  async_orchestrator.py  build.gradle  config.py  docker-compose.yml  gradlew  main.py  orchestrator.py  pyproject.toml  requirements.txt  settings.gradle  utils.py
.github/workflows/: docker-build.yml
agents/: __init__.py  ocr_agent.py  pdf_capture.py  playwright_capture.py  storage.py
backend-ai/app/: __init__.py  main.py
backend-ai/app/api/: dependencies.py
backend-ai/app/api/endpoints/: __init__.py  analysis.py  chat.py  evaluate.py  health.py  workshop.py
backend-ai/app/api/schemas/: chat.py  common.py  evaluate.py  workshop.py
backend-ai/app/core/: config.py  database.py  logging.py
backend-ai/app/models/: __init__.py  analysis_result.py  company.py  job_posting.py
backend-ai/app/services/chat/: __init__.py  chat_service.py  memory.py
backend-ai/app/services/crawler/: __init__.py  base_crawler.py
backend-ai/app/services/llm/: __init__.py  analyzer.py  comparator.py  generator.py  summarizer.py
backend-ai/app/services/rag/: generator.py  reranker.py  retriever.py
backend-ai/app/services/vector/: __init__.py  embedder.py  qdrant_client.py  search.py
backend-ai/app/utils/: date_utils.py  text_processor.py  validators.py
backend-ai/app/workers/: __init__.py  consumer.py  scheduler.py  tasks.py
backend-ai/tests/: conftest.py
backend-ai/tests/integration/: test_api.py
backend-ai/tests/unit/services/: __init__.py  test_analyzer.py  test_generator.py
backend-ai/tests/unit/workers/: __init__.py  test_tasks.py
backend-core/: build.gradle
backend-core/src/main/resources/: application.properties  application.yml
crawlers/: __init__.py  base_crawler.py  coupang.py  daangn.py  hanwha.py  hyundai.py  kakao.py  kt.py  lg.py  line.py  naver.py  posco.py  registry.py  toss.py  woowahan.py
data/coupang/: coupang_7009674_[쿠팡]이츠 가맹점 세일즈 전문가 (계약직_인센티브_정_content.html  coupang_7025991_[쿠팡페이] 핀테크 비즈니스 운영(대리~차_부장)_content.html  coupang_7192153_Financial Planning & Analysis(_content.html  coupang_7256210_[CFS] Team Captain 모집공고_content.html  coupang_7317056_Staff, Back-end Engineer (Fulf_content.html  coupang_7343044_[쿠팡] 판매자 정책 운영 담당자 (정규직_ 재택근무)_content.html  coupang_7364044_[쿠팡풀필먼트서비스] HVAC (냉난방공조) 팀장급_content.html  coupang_7366517_Principal, Strategic Talent Pa_content.html  coupang_7374947_Staff Product Designer ㅡ Coupa_content.html  coupang_7382671_Principal Product Management (_content.html  coupang_7385268_[쿠팡] 광고사업부 PM 지원 (계약직)_content.html  coupang_7388074_[쿠팡페이] 시니어 QA 엔지니어 집중채용 (계약직)_content.html  coupang_7390643_[Coupang] Senior PMO (Rocket G_content.html  coupang_7396676_[쿠팡이츠서비스] CX 운영 담당자_content.html  coupang_7400274_[쿠팡] CS AI 서비스 기획 담당자 (5년이상)_content.html  coupang_7404630_[쿠팡로지스틱스서비스] 계약직 Quickflex Exp_content.html  coupang_7410147_Senior Business Analyst [Retai_content.html  coupang_7410160_[쿠팡] Andon 품질 정책 운영 및 관리 담당자 (_content.html  coupang_7410230_Security Engineer - Cyber Thre_content.html  coupang_7410419_Tax 담당자 채용 (신입)_content.html  coupang_7412405_[쿠팡] 세무 전문가 (법인세 담당)_content.html  coupang_7412407_[쿠팡] 세무 전문가 (부가가치세 담당)_content.html
data/html/Coupang/2025-11-14/: coupang_3937538__쿠팡__로켓배송_상품기획_담당자_상시_채용_경력_7년_이상_.html  coupang_4414280_Staff__Back-end_Engineer__Fulfillment_Technologies.html  coupang_4724152_Staff__Back-end_Engineer__Seller_Platform_.html  coupang_4765951_Coupang_Talent_Network.html  coupang_4874231__쿠팡이츠서비스__Business___Operations_부문_상시_채용_분야__배달지역_.html  coupang_4955790_Senior_Product_Designer__Coupang_Eats_.html  coupang_5123693__쿠팡이츠서비스__CS_부문별_상시_채용.html  coupang_5169083__Coupang__Staff__Data_Center_Engineer.html  coupang_5206135__쿠팡풀필먼트서비스__물류센터_운영관리자__Area_Manager_.html  coupang_5206144__쿠팡풀필먼트서비스__물류센터_설비보전_엔지니어_중간관리자급_모집.html  coupang_5315595_Senior_Staff__Technical_Program_Management__Global.html  coupang_5570301_Staff__Back-end_Engineer__Taiwan_Business_Engineer.html  coupang_5621241__쿠팡__로켓배송_상품기획_담당자__경력_10년_이상___전_카테고리_대규모_채용.html  coupang_5647253__쿠팡이츠서비스__자동화_구축_담당자.html  coupang_5848138_Sr__Staff__Back-end_Engineer__Global_Operations_Te.html  coupang_5868936_Sr__Staff_Front-end_Engineer___Global_Operations_T.html  coupang_5923444__쿠팡로지스틱스서비스__로켓설치_A_S_운영_담당자__Rocket_A_S_Operation.html  coupang_5937293_Senior_Staff_Data_Scientist__CX_Product_Analytics_.html  coupang_5978864_Senior_Director_of_Product_Design__Coupang_Ads_.html  coupang_5981148__쿠팡로지스틱스서비스__로켓설치_협력사_운영_관리_담당자__Rocket_Install_Op.html  coupang_6051528_Staff__UX_Researcher__Ads_UX_.html  coupang_6077599__쿠팡__쿠렌즈_채용___쿠팡_이츠_상품_등록_및_검수_사무보조__재택근무_.html  coupang_6105105_Senior_Staff_Product_Designer__Marketplace_.html  coupang_6133674__쿠팡__쿠렌즈_채용___쿠팡_입점_판매자_보상_업무_지원__재택근무_.html  coupang_6133715__쿠팡__쿠렌즈_채용___쿠팡_로켓그로스_판매자_판매활동_지원__재택근무_.html  coupang_6133720__쿠팡__쿠렌즈_채용___E-Sports_선수_및_선수관리직__재택근무_.html  coupang_6137112_Manager__Back-end_Engineering__Global_Operations_T.html  coupang_6172973_Director_Tax.html  coupang_6211765_Senior_Staff___Backend_Engineer__Core_Serving_.html  coupang_6219977__CLS__Principal__Business_Analysis__Supply_Chain_S.html  coupang_6387010_Director__Product_Manager__SCM_System_.html  coupang_6387603_Staff__Data_Scientist_SCM_.html  (+418 more)
src/main/resources/: application-prod.yml  application.yml
tests/: test_crawler.py  test_storage.py
(+1161 files in other folders)
