[project]
name = "skouter-ai-backend"
version = "1.0.0"
description = "SKouter AI Backend - FastAPI service for RAG, LangChain, and ML"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # FastAPI & Starlette
    "fastapi==0.104.1",
    "starlette==0.27.0",
    "uvicorn[standard]==0.24.0",
    
    # Database & ORM
    "SQLAlchemy==2.0.23",
    "alembic==1.12.1",
    "PyMySQL==1.1.0",
    "cryptography==41.0.7",
    
    # Vector DB
    "qdrant-client==1.7.0",
    
    # Redis
    "redis==5.0.1",
    
    # LLM & RAG
    "langchain==0.1.0",
    "openai==1.3.8",
    "python-dotenv==1.0.0",
    
    # Web Scraping
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "selenium==4.15.2",
    "lxml==4.9.3",
    
    # Data Processing
    "pandas==2.1.3",
    "numpy==1.24.3",
    "python-dateutil==2.8.2",
    
    # Task Scheduling
    "APScheduler==3.10.4",
    
    # Validation
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    
    # Utilities
    "python-multipart==0.0.6",
    "aiofiles==23.2.1",
    "httpx==0.25.1",
    
    # Logging
    "python-json-logger==2.0.7",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    
    # Code Quality
    "black==23.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "ruff==0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "ruff>=0.1.9",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
